Resolvendo problemas do CategoriaController

--- a/src/main/resources/templates/livros/lista.html
+++ b/src/main/resources/templates/livros/lista.html
@@ -8,7 +8,10 @@
 <body>
     <h1>Acervo da Biblioteca</h1>
 
-    <p><a th:href="@{/livros/novo}">+ Cadastrar Novo Livro</a></p>
+    <p>
+        <a th:href="@{/livros/novo}">+ Cadastrar Novo Livro</a>
+        <a th:href="@{/categorias}">+ Gerenciar Categorias</a>
+    </p>
 
     <table border = "1">
         <thead>
