--- a/src/main/resources/templates/livros/detalhes.html
+++ b/src/main/resources/templates/livros/detalhes.html
@@ -1,38 +1,25 @@
-<!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="'Detalhes: ' + ${livro.titulo}">Detalhes do Livro</title>
 </head>
-</head>
 <body>
-    <h1 th:text="${livro.titulo}">Titulo do Livro</h1>
+    
+    <div layout:fragment="content">
+        <h1 th:text="${livro.titulo}">Titulo do Livro</h1>
 
-    <p><strong>ID:</strong> <span th:text="${livro.id}"></span></p>
-    <p><strong>Autor:</strong> <span th:text="${livro.autor}"></span></p>
-    <p><strong>Categoria:</strong><span th:text="${livro.categoria.descricao}"></span></p> 
-    <p><strong>Ano de Publicação:</strong> <span th:text="${livro.anoPublicacao}"></span></p>
-    <p><strong>Estoque:</strong> <span th:text="${livro.estoque}"></span></p>
-    
-    <hr>
-    <p>
-        <a th:href="@{/livros/editar/{id}(id=${livro.id})}">Editar Livro</a>
-        <a th:href="@{/}">Voltar para a Lista</a>
-    </p>
-    
+        <div class="card p-4 shadow-sm">
+            <p><strong>ID:</strong> <span th:text="${livro.id}"></span></p>
+            <p><strong>Autor:</strong> <span th:text="${livro.autor}"></span></p>
+            <p><strong>Categoria:</strong><span th:text="${livro.categoria.descricao}"></span></p> 
+            <p><strong>Ano de Publicação:</strong> <span th:text="${livro.anoPublicacao}"></span></p>
+            <p><strong>Estoque:</strong> <span th:text="${livro.estoque}"></span></p>
+        </div>
+        <div class="mt-4">
+            <a th:href="@{/livros/editar/{id}(id=${livro.id})}" class="btn btn-warning me-2">Editar Livro</a>
+            <a th:href="@{/livros}" class="btn btn-secondary">Voltar para a Lista</a>
+        </div>
+    </div>
 </body>
 </html>
- <!--
-<!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title th:text="'Detalhes: ' + ${livro.titulo}">Detalhes do Livro</title>
-</head>
-<body>
-    <h1 th:text="${livro.titulo}">Título</h1>
-    
-    <p><a th:href="@{/}">Voltar para a Lista</a></p>
-</body>
-</html>-->
