--- a/src/main/resources/templates/livros/cadastro.html
+++ b/src/main/resources/templates/livros/cadastro.html
@@ -1,35 +1,43 @@
-<!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Livros</title>
+    <title>Cadastro de Livro</title>
 </head>
 <body>
-    <h1>Cadastro de Livro</h1>
+    
+    <div layout:fragment="content">
+        <h1 class="mb-4">Cadastro de Livro</h1>
 
-    <form th:action="@{/livros}" th:object="${livro}" method="post">
+        <form th:action="@{/livros}" th:object="${livro}" method="post">
 
-        <input type="hidden" th:field="*{id}">
+            <input type="hidden" th:field="*{id}">
 
-        <label for="titulo">Titulo:</label>
-        <input type="text" id="titulo" th:field="*{titulo}" required><br><br>
+            <div class="mb-3">
+                <label for="titulo">Titulo:</label>
+                <input type="text" id="titulo" th:field="*{titulo}" required><br><br>
+            </div>
+
+            <div class="mb-3">
+                <label for="autor">Autor:</label>
+                <input type="text" id="autor" th:field="*{autor}" class="form-control" required><br><br>
+            </div>
+
+            <div class="mb-3">
+                <label for="categoria" class="form-label">Categoria:</label>
+                    <select id="categoria" th:field="*{categoria}" class="form-select" required>
+                        <option value="">Selecione...</option>
+                        <option th:each="cat : ${T(com.projeto.livraria.model.CategoriaEnum).values()}"
+                                th:value="${cat}"
+                                th:text="${cat.descricao}">Ficcão                
+                        </option>
+                    </select>
+            </div>
+
+            <button type="submit" class="btn btn-sucess me-2">Salvar Livro</button>
+            <p><a th:href="@{/livros}" class="btn btn-outline-secondary">Voltar para a Lista</a></p>
         
-        <label for="autor">Autor:</label>
-        <input type="text" id="autor" th:field="*{autor}" required><br><br>
-
-        <label for="categoria">Categoria:</label>
-            <select id="categoria" th:field="*{categoria}" required>
-                <option value="">Selecione...</option>
-                <option th:each="cat : ${T(com.projeto.livraria.model.CategoriaEnum).values()}"
-                        th:value="${cat}"
-                        th:text="${cat.descricao}">Ficcão                
-                </option>
-            </select>
-
-        <button type="submit">Salvar Livro</button>
-    </form>
-
-    <p><a th:href="@{/}">Voltar para a Lista</a></p>
+        </form>
+    </div>
 </body>
 </html>
