--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,14 +15,10 @@
     <th:block layout fragment="css-extra"></th:block>
 </head>
 <body class="light-theme">
-    <div class="container mt-4">
-
+    <div class="d-flex flex-column min-vh-100">
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4 rounded shadow-sm" th:fragment="main-nav">
             <div class="container-fluid">
                 <a class="navbar-brand" th:href="@{/}">📚</a>
-        
-                
-
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
                     <li class="nav-item">
@@ -33,16 +29,18 @@
                     </li>
                 </ul>
             </div>
-            <button id="theme-toggle" class="btn btn-outline-dark me-2">
-                <span id="theme-icon">🌙</span>
-            </button>
+        <button id="theme-toggle" class="btn btn-outline-dark me-2">
+            <span id="theme-icon">🌙</span>
+        </button>
     </div>
-</nav>
-        <div layout:fragment="content">
-            </div>
-    
-
-    <script th:src="@{/js/theme-switcher.js}"></script>
-    <th:block layout:fragment="js-extra"></th:block>
+    </nav>
+<div layout:fragment="content"></div>
+<footer class="text-center py-3 border-top mt-auto">
+    <p th:text="|&copy; ${#dates.format(#dates.createNow(), 'yyyy')} Projeto FATEC|">
+        &copy; 2025 Projeto FATEC
+    </p>
+</footer>
+<script th:src="@{/js/theme-switcher.js}"></script>
+<th:block layout:fragment="js-extra"></th:block>
 </body>
 </html>
