--- a/src/main/resources/templates/livros/cadastro.html
+++ b/src/main/resources/templates/livros/cadastro.html
@@ -12,18 +12,31 @@
         <form th:action="@{/livros}" th:object="${livro}" method="post">
 
             <input type="hidden" th:field="*{id}">
+            <div class="row">
+                <div class="col-md-3 mb-3">
+                    <label for="titulo" class="form-label">Titulo:</label>
+                    <input type="text" id="titulo" th:field="*{titulo}" required class="form-control"><br>
+                </div>
 
-            <div class="mb-3">
-                <label for="titulo">Titulo:</label>
-                <input type="text" id="titulo" th:field="*{titulo}" required><br><br>
+                <div class="col-md-3 mb-3">
+                    <label for="autor" class="form-label">Autor:</label>
+                    <input type="text" id="autor" th:field="*{autor}" required class="form-control"><br>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-md-3 mb-3">
+                    <label for="anoPublicacao" class="form-label">Ano de Publicação:</label>
+                    <input type="number" id="anoPublicacao" th:field="*{anoPublicacao}" required min="0" class="form-control"><br>
+                </div>
+                
+                <div class="col-md-3 mb-3">
+                    <label for="estoque" class="form-label">Estoque:</label>
+                    <input type="number" id="estoque" th:field="*{estoque}" required min="0" class="form-control"><br>
+                </div>
             </div>
 
-            <div class="mb-3">
-                <label for="autor">Autor:</label>
-                <input type="text" id="autor" th:field="*{autor}" class="form-control" required><br><br>
-            </div>
-
-            <div class="mb-3">
+            <div class="col-md-6 mb-3">
                 <label for="categoria" class="form-label">Categoria:</label>
                     <select id="categoria" th:field="*{categoria}" class="form-select" required>
                         <option value="">Selecione...</option>
@@ -33,10 +46,11 @@
                         </option>
                     </select>
             </div>
-
-            <button type="submit" class="btn btn-sucess me-2">Salvar Livro</button>
-            <p><a th:href="@{/livros}" class="btn btn-outline-secondary">Voltar para a Lista</a></p>
-        
+            
+            <div class="mt-4">
+                <button type="submit" class="btn btn-sucess me-2">Salvar Livro</button>
+                <p><a th:href="@{/livros}" class="btn btn-outline-secondary">Voltar para a Lista</a></p>
+            </div>
         </form>
     </div>
 </body>
